--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,18 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+:root {
+  --font-geist: "Geist", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
+  --font-roboto: "Roboto", sans-serif;
+  --font-inter: "Inter", sans-serif;
+}
+
+body {
+  /* font-family: var(--font-geist); */
+  font-family: var(--font-poppins);
+  /* font-family: var(--font-inter); */
+  /* font-family: var(--font-roboto); */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +29,11 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
 }
